synch Travis build changes from master branch