@@ -1,6 +1,6 @@
 apply plugin: "base"
 
-version = System.getProperty("grails.version") ?: "2.4.4.BUILD-SNAPSHOT"
+version = project.getProperty("grails.version")
 
 archivesBaseName = "grails-docs"
 
@@ -22,9 +22,13 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.grails:grails-docs:2.4.4.BUILD-SNAPSHOT"
-        classpath 'org.codehaus.groovy:groovy-all:2.3.0'
+        classpath "org.grails:grails-docs:3.0.0.RC2"
+        classpath 'org.codehaus.groovy:groovy-all:2.4.3'
     }
+}
+
+task buildscriptDependencies(type: DependencyReportTask) {
+    configurations = [buildscript.configurations.classpath]
 }
 
 // use jsoup in PdfBuilder for cleaning input html
@@ -47,15 +51,17 @@ task fetchGrailsSource << {
         mapper type: "regexp", from: "(grails-grails-core-\\S*?/)(.*)", to: "grails-src/\\2"
     }
 
+    ant.chmod(file:"${checkOutDir}/grails-src/gradlew", perm:700)
+
     println "Grails source code has been downloaded to ${relativePath(grailsHome)}"
 }
 
 fetchGrailsSource.onlyIf { !explicitGrailsHome }
 
-task apiDocs(type: GradleBuild, dependsOn: 'fetchGrailsSource') {
-    tasks = ["groovydoc"]
-    buildFile = "${project.grailsHome}/build.gradle"
-    startParameter.excludedTaskNames = ['compileGroovy', 'compileUaaGroovy', 'compileJsp21Groovy', 'compileAstGroovy', 'jar']
+task apiDocs(type: Exec, dependsOn: 'fetchGrailsSource') {
+    commandLine = ["./gradlew", "groovydoc", '--info', '--stacktrace']
+    workingDir = "${checkOutDir}/grails-src"
+    environment "GRADLE_OPTS", "-Xmx2048m -Xms256m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled -XX:+HeapDumpOnOutOfMemoryError"
 }
 
 apiDocs.onlyIf { !System.getProperty("disable.groovydocs") }
@@ -78,7 +84,7 @@ task publishGuide(type: grails.doc.gradle.PublishGuide, dependsOn: ['apiDocs', '
     // generated with a 'en' in the path, but the source is in 'en'
     // so that it's easy to track with git.
     sourceDir = new File(projectDir, "src/en")
-    propertiesFiles = [ new File(project.grailsHome, "build.properties") ]
+    propertiesFiles = [ new File(projectDir, "gradle.properties") ]
     macros = [ new grails.doc.macros.GspTagSourceMacro(searchDirs) ]
 }
 
